--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             </p>
             <br />
             <p>
-              Meu primeiro contato com programação foi na disciplina de Programação Computacional, no primeiro semestre do curso de Engenharia Elétrica, onde trabalhei principalmente com a linguagem em C. 
+              Meu primeiro contato com programação foi no primeiro semestre do curso de Engenharia Elétrica, onde trabalhei com programação voltada para a engenharia. 
             </p>
             <br />
             <p>
-              Hoje me encontro em transição de carreira para a área da tecnologia. Sou aluna do projeto <strong>Desenvolve 2022</strong>, ofertado pelo Grupo Boticário, no qual sigo a formação em Full Stack.
+              Hoje me encontro em transição de carreira para a área da tecnologia. Sou aluna do projeto <strong>Desenvolve 2022</strong>, ofertado pelo Grupo Boticário, no qual sigo a formação em Full Stack, e atualmente estou na graduação de Engenharia de Software.
             </p>
           </div>
         </div>
@@ -100,14 +100,14 @@
               <i class="icon-book-open"></i>
               <h3 class="title">Formação</h3>
               <p>
-                Formação técnica em Administração pelo Instituto Federal do Piauí (IFPI), atuando como bolsista de Iniciação Científica (PIBIC-Jr). Dessa forma, tive intenso contato com análise de dados e pesquisa acadêmica.
+                Formação técnica em Administração pelo Instituto Federal do Piauí (IFPI), atuando como bolsista de Iniciação Científica (PIBIC-Jr). Atualmente, sou discente de Engenharia de Software pela Faculdade Pitágoras.
               </p>
             </div>
             <div class="card">
               <i class="icon-monitor"></i>
               <h3 class="title">Linguagens</h3>
               <p>
-                Atualmente trabalho com JavaScript, HTML e CSS. Além disso, estou aprendendo a utilizar as ferramentas NodeJS, MySQL e React.
+                Trabalho principalmente com JavaScript e ferramentas como NodeJS, React e MySQL. Porém, estou em constante aprendizado e disposta a expandir meus conhecimentos.
               </p>
             </div>
             <div class="card">
